working on mobile calendar view

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -10474,11 +10474,25 @@ div.my-calendar-header li.my-calendar-next {
   float: right; }
 
 div.my-calendar-date-switcher form div label.maybe-hide {
-  display: none; }
+  display: none !important; }
+
+div.mc-main:not(.mini) table.my-calendar-table {
+  border-spacing: 2px; }
+  div.mc-main:not(.mini) table.my-calendar-table tr.mc-row td {
+    height: 100px !important; }
+
+div.mc-main.mini table.my-calendar-table {
+  border-spacing: 1px; }
+  div.mc-main.mini table.my-calendar-table tr.mc-row td {
+    height: 50px !important; }
+    div.mc-main.mini table.my-calendar-table tr.mc-row td.has-events {
+      background-color: #D41C53; }
+      div.mc-main.mini table.my-calendar-table tr.mc-row td.has-events a {
+        text-decoration: none;
+        color: white; }
 
 table.my-calendar-table {
   border-collapse: separate;
-  border-spacing: 2px;
   background-color: #252525; }
   table.my-calendar-table caption.heading.my-calendar-month {
     caption-side: top;
@@ -10496,7 +10510,6 @@ table.my-calendar-table {
     table.my-calendar-table td.nextmonth span, table.my-calendar-table td.nextmonth .calendar-event {
       display: none; }
   table.my-calendar-table tr.mc-row td {
-    height: 100px !important;
     background-color: white;
     padding: 0 !important; }
     table.my-calendar-table tr.mc-row td .calendar-event h3, table.my-calendar-table tr.mc-row td .calendar-event h3 a {
