--- a/sass/theme/_calendar_customizations.scss
+++ b/sass/theme/_calendar_customizations.scss
@@ -30,7 +30,7 @@ div.mc-main.mini table.my-calendar-table {
   border-spacing: 1px;
   tr.mc-row td {
     height: 50px !important;
-    &.has-events {
+    &.has-events:not(.nextmonth) {
       background-color: $primary;
       a {
         text-decoration: none;
@@ -105,7 +105,7 @@ div.category-key {
       margin: 2px 4px 2px 0px !important;
     }
     li {
-      display: inline;
+      display: inline-flex;
       margin: 2px 4px !important;
     }
     li.current a {
