--- a/sass/theme/_blogs_overview_page.scss
+++ b/sass/theme/_blogs_overview_page.scss
@@ -8,7 +8,7 @@
 
 %blog-overview-titles {
   font-family: BebasNeue;
-  font-size: 26px;
+  font-size: 26px !important;
 }
 
 %blog-overview-learn-more {
