--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -10481,6 +10481,27 @@ div.mc-main:not(.mini) table.my-calendar-table {
   div.mc-main:not(.mini) table.my-calendar-table tr.mc-row td {
     height: 100px !important; }
 
+div.mc-main.mini .event-title {
+  display: none; }
+
+div.mc-main.mini .mini-event {
+  border: none; }
+  div.mc-main.mini .mini-event .mini-event-detail a {
+    color: #D41C53 !important; }
+
+div.mc-main.mini .calendar-events {
+  background-color: white;
+  border: 2px solid #17a2b8; }
+
+div.mc-main.mini .calendar-events, div.mc-main.mini .calendar-event {
+  float: none;
+  width: 80% !important;
+  left: 10px !important; }
+  @media (max-width: 767.98px) {
+    div.mc-main.mini .calendar-events, div.mc-main.mini .calendar-event {
+      width: 90% !important;
+      left: 5px !important; } }
+
 div.mc-main.mini table.my-calendar-table {
   border-spacing: 1px; }
   div.mc-main.mini table.my-calendar-table tr.mc-row td {
@@ -10556,6 +10577,9 @@ div.category-key ul li a {
     display: none !important; }
 
 div#mc_event .single-event .details {
+  border: 0; }
+
+.mc-main .details {
   border: 0; }
 
 /* Fonts */
@@ -11053,6 +11077,16 @@ div.centered-text p {
   line-height: 1.5;
   text-align: center;
   letter-spacing: normal; }
+
+/* Style for embedded calendar from My Calendar */
+.embedded-calendar {
+  background-color: black; }
+  .embedded-calendar h2 {
+    font-family: BebasNeue;
+    text-transform: uppercase;
+    color: #D41C53; }
+  .embedded-calendar table caption {
+    display: none; }
 
 /* Footer */
 div#wrapper-footer div.donate-footer {
