--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -18,3 +18,5 @@ $darkgray: #343434;
 $darkergray: #252525;
 $background: #FFF;
 $navbar-brand-height: 8rem;
+
+$font-family-sans-serif: GothicA1, Arial, Roboto, sans-serif;
